✨ Flickering titles, resolves #5

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -2,8 +2,6 @@
 
 .about {
   position: relative;
-
-  height: 100%;
   background-color: var(--color-background-primary);
 
   &::before {
