--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,7 +1,7 @@
 @import './../../theme/mixins/limit';
 
 .home {
-  height: 95%;
+  height: 100%;
   max-height: 62vh;
 
   position: relative;
