--- a/src/components/roadmap/Roadmap.module.scss
+++ b/src/components/roadmap/Roadmap.module.scss
@@ -1,6 +1,6 @@
 @import './../../theme/mixins/limit';
 
-.preview {
+.roadmap {
   background-color: var(--color-background-primary);
 
   @include padding;
