--- a/src/components/team/Team.module.scss
+++ b/src/components/team/Team.module.scss
@@ -1,6 +1,6 @@
 @import './../../theme/mixins/limit';
 
-.preview {
+.team {
   background-color: var(--color-background-primary);
 
   @include padding;
